# clinical-scribe

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: base.yaml  phase1_l4.yaml  phase1_smoke.yaml  phase1_t4.yaml
docs/: project-overview.md
notebooks/: phase1_colab.ipynb
scripts/: prepare_data.py
src/clinical_scribe/: __init__.py  __main__.py  cli.py  config.py  data.py  eval.py  export.py  model.py  serve.py  train.py  utils.py
tests/: conftest.py  test_config.py  test_data.py  test_eval.py  test_export.py  test_serve.py  test_smoke_train.py
